# illusion_of_thinking

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_Hanoi_experiments.bash  run_River_experiments.bash  setup.cfg
docs/: index.md  mcp_server.md  simulator_tools.md
illusion_of_thinking/: __init__.py  constants.py  mcp_server.py  prompts.py  run_experiment.py  run_simple_agent.py  simulator_tools.py  simulators.py
illusion_of_thinking/prompts/: RiverCrossing_original.yaml  TowerOfHanoi_original.yaml
tests/: test_hanoi.py  test_mcp_server.py  test_river_crossing.py  test_simulator_tools.py
