[tool.poetry]
name = "illusion-of-thinking"
version = "0.1.0"
description = "A project about the illusion of thinking"
authors = ["Rosenbaum Lars (XC-AS/EDP1) <lars.rosenbaum@de.bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^4.2.0"
httpx = "^0.28.1"
pytest_asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
